# Ethack

./: MANIFEST.in  README.md  pyproject.toml
src/: __main__.py
src/ethack/: Holder.md  __init__.py  __main__.py  accountattack.py  webattack.py
src/reader/: __init__.py  viewer.py
tests/: Simple_webattack.py
